# WFIT

./: pyproject.toml
notebooks/: drgania.ipynb  dzwiek.ipynb  misc_python.ipynb  predkosc_przyspieszenie.ipynb  sily_bezwladnosci.ipynb  wizualizacja_rownan.ipynb
